samples/_failures_safe/1761417703_7fa101_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96f69ede.c: In function ‘main’:
./samples/SAFE/__tmp_96f69ede.c:158:5: error: expected identifier or ‘(’ at end of input
  158 |     int
      |     ^~~
./samples/SAFE/__tmp_96f69ede.c:158:5: error: expected declaration or statement at end of input
